--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.10.0",
+    "clsx": "^2.1.1",
     "firebase": "^11.10.0",
     "next": "15.3.5",
     "react": "^19.0.0",
