--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@headlessui/react": "^2.2.5",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
-    "axios": "^1.10.0",
+    "axios": "1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cookies-next": "^6.1.0",
