Update `firebase.json` for Next.js hosting and serverless functions deployment
- Changed `public` directory to `.next` for Next.js hosting.
- Added rewrites mapping all routes to `nextApp` serverless function.
- Included `functions` configuration to enable serverless function deployment.

--- a/firebase.json
+++ b/firebase.json
@@ -1,11 +1,21 @@
 {
   "hosting": {
     "site": "konnektaro",
-    "public": "out",
+    "public": ".next",
+    "rewrites": [
+      {
+        "source": "**",
+        "function": "nextApp"
+      }
+    ],
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
     ]
+  },
+  "functions": {
+    "source": "."
   }
 }
+
