--- a/firebase.json
+++ b/firebase.json
@@ -1,21 +1,12 @@
 {
   "hosting": {
     "site": "konnektaro",
-    "public": ".next",
-    "rewrites": [
-      {
-        "source": "**",
-        "function": "nextApp"
-      }
-    ],
+    "public": "out",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
     ]
-  },
-  "functions": {
-    "source": "."
   }
 }
 
