--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "cookies-next": "^6.1.0",
     "firebase": "^11.10.0",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "next-themes": "^0.4.6",
