Update build script and Firebase workflow for static exports
- Add `export` script to `package.json` for static export generation.
- Modify Firebase workflow to use `npm run export` instead of `npm run build`.

--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -32,7 +32,7 @@ jobs:
           echo "NODE_ENV=${{ secrets.NODE_ENV }}" >> .env
 
       - name: Build
-        run: npm run build
+        run: npm run export
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
