Remove Qodana config and update build scripts and Firebase workflow
- Delete `qodana.yaml` as it is no longer in use.
- Add `postbuild` script to `package.json` for cleaning up `.txt` files after build.
- Update Firebase workflow to run `npm run build` and `npm run postbuild` instead of `npm run export`.
- Modify `firebase.json` to exclude `.txt` files from deployment.

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
-    "export": "next build && next export",
     "start": "next start",
     "lint": "next lint",
+    "postbuild": "find out -name \"*.txt\" -delete",
     "deploy": "npm run build && firebase deploy --only hosting"
   },
   "dependencies": {
