--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -32,7 +32,7 @@ jobs:
           echo "NODE_ENV=${{ secrets.NODE_ENV }}" >> .env
 
       - name: Build
-        run: npm run export
+        run: npm run build && npm run postbuild
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
