--- a/firebase.json
+++ b/firebase.json
@@ -5,13 +5,8 @@
     "ignore": [
       "firebase.json",
       "**/.*",
-      "**/node_modules/**"
-    ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
+      "**/node_modules/**",
+      "**/*.txt"
     ],
     "headers": [
       {
