Refactor postbuild script and Firebase configuration
- Replace inline `postbuild` command in `package.json` with `cleanup.bat` for improved script management.
- Remove `trailingSlash` from `next.config.ts`.
- Simplify `firebase.json` by removing unnecessary headers and exclusions.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postbuild": "find out -name \"*.txt\" -delete",
+    "postbuild": "cleanup.bat",
     "deploy": "npm run build && firebase deploy --only hosting"
   },
   "dependencies": {
