--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postbuild": "cleanup.bat",
+    "postbuild": "node cleanup.js",
     "deploy": "npm run build && firebase deploy --only hosting"
   },
   "dependencies": {
