--- a/apps/user/package.json
+++ b/apps/user/package.json
@@ -1,26 +1,15 @@
 {
-  "name": "konnektaro",
+  "name": "@konnektaro/user",
   "version": "0.1.0",
   "private": true,
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ],
   "scripts": {
-    "dev:admin": "npm run dev --workspace=apps/admin",
-    "dev:user": "npm run dev --workspace=apps/user",
-    "dev:all": "npm run dev:admin & npm run dev:user",
-    "build:admin": "npm run build --workspace=apps/admin",
-    "build:user": "npm run build --workspace=apps/user",
-    "build:all": "npm run build:admin && npm run build:user",
-    "lint:admin": "npm run lint --workspace=apps/admin",
-    "lint:user": "npm run lint --workspace=apps/user",
-    "lint:all": "npm run lint:admin && npm run lint:user",
-    "clean": "rm -rf node_modules apps/*/node_modules packages/*/node_modules",
-    "postbuild": "node cleanup.js",
-    "deploy": "npm run build:all && firebase deploy --only hosting"
+    "dev": "next dev --turbopack --port 3000",
+    "build": "next build",
+    "start": "next start --port 3000",
+    "lint": "next lint"
   },
   "dependencies": {
+    "@konnektaro/shared": "*",
     "@headlessui/react": "^2.2.5",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
@@ -48,19 +37,14 @@
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
-    "firebase-tools": "^14.11.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
-    "tailwindcss-animate": "^1.0.7",
-    "tw-animate-css": "^1.3.5",
     "typescript": "^5"
   }
 }
