Enhance admin and user applications with new authenticated layouts and refactor import paths for shared components. Update TypeScript configurations to include new layout components and adjust paths for better module resolution.

--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -20,6 +20,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx"],
+  "include": ["src/**/*.ts", "src/**/*.tsx", "../../apps/user/src/components/UserAuthenticatedLayout.tsx"],
   "exclude": ["node_modules", "dist"]
 }
