--- a/apps/admin/tsconfig.json
+++ b/apps/admin/tsconfig.json
@@ -31,6 +31,6 @@
       "@shared/contexts/*": ["../../packages/shared/src/contexts/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "../../packages/shared/src/**/*.ts", "../../packages/shared/src/**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "../../packages/shared/src/**/*.ts", "../../packages/shared/src/**/*.tsx", "../user/src/components/UserAuthenticatedLayout.tsx"],
   "exclude": ["node_modules"]
 }
