--- a/apps/user/package.json
+++ b/apps/user/package.json
@@ -8,6 +8,9 @@
     "start": "next start --port 3000",
     "lint": "next lint"
   },
+  "paths": {
+    "@/*": ["./src/*"]
+  },
   "dependencies": {
     "@konnektaro/shared": "*",
     "@headlessui/react": "^2.2.5",
