Integrate Tailwind CSS into admin and user applications by updating configuration files and removing deprecated styles. Refactor layout imports to align with the new monorepo structure, and add a sync script for asset management. Clean up unused styles and components to streamline the codebase.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lint:user": "npm run lint --workspace=apps/user",
     "lint:all": "npm run lint:admin && npm run lint:user",
     "clean": "rm -rf node_modules apps/*/node_modules packages/*/node_modules",
+    "sync:assets": "node scripts/sync-public-assets.js",
     "postbuild": "node cleanup.js",
     "deploy": "npm run build:all && firebase deploy --only hosting"
   },
