--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -4,9 +4,17 @@
   "private": true,
   "main": "./src/index.ts",
   "types": "./src/index.ts",
+  "exports": {
+    "./styles.css": "./dist/index.css",
+    "./*": "./dist/*.js"
+  },
   "scripts": {
-    "build": "tsc",
-    "dev": "tsc --watch"
+    "build:styles": "tailwindcss -i ./src/styles.css -o ./dist/index.css",
+    "build:components": "tsc",
+    "build": "npm run build:styles && npm run build:components",
+    "dev:styles": "tailwindcss -i ./src/styles.css -o ./dist/index.css --watch",
+    "dev:components": "tsc --watch",
+    "dev": "npm run dev:styles & npm run dev:components"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.5",
@@ -36,9 +44,14 @@
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
+    "@repo/tailwind-config": "*",
+    "@tailwindcss/cli": "^4.1.5",
+    "@tailwindcss/postcss": "^4.1.5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.20",
+    "tailwindcss": "^4.1.5",
     "typescript": "^5"
   },
   "peerDependencies": {
