--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -31,11 +31,29 @@ jobs:
           echo "NEXT_PUBLIC_SOCKET_URL=${{ secrets.NEXT_PUBLIC_SOCKET_URL }}" >> .env
           echo "NODE_ENV=${{ secrets.NODE_ENV }}" >> .env
 
-      - name: Build
-        run: npm run build && npm run postbuild
-      - uses: FirebaseExtended/action-hosting-deploy@v0
+      - name: Build Shared Package
+        run: npm run build:shared:styles
+      - name: Build User App
+        run: npm run build:user
+      - name: Build Admin App
+        run: npm run build:admin
+      - name: Post Build Cleanup
+        run: npm run postbuild
+
+      - name: Deploy User App
+        uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_KONNEKTAR_5E73F }}
           channelId: live
           projectId: konnektar-5e73f
+          target: konnektaro
+
+      - name: Deploy Admin App
+        uses: FirebaseExtended/action-hosting-deploy@v0
+        with:
+          repoToken: ${{ secrets.GITHUB_TOKEN }}
+          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_KONNEKTAR_5E73F }}
+          channelId: live
+          projectId: konnektar-5e73f
+          target: konnektaro-admin
