--- a/firebase.json
+++ b/firebase.json
@@ -1,12 +1,24 @@
 {
-  "hosting": {
-    "site": "konnektaro",
-    "public": "out",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**",
-      "**/*.txt"
-    ]
-  }
+  "hosting": [
+    {
+      "site": "konnektaro",
+      "public": "apps/user/out",
+      "ignore": [
+        "firebase.json",
+        "**/.*",
+        "**/node_modules/**",
+        "**/*.txt"
+      ]
+    },
+    {
+      "site": "konnektaro-admin",
+      "public": "apps/admin/out",
+      "ignore": [
+        "firebase.json",
+        "**/.*",
+        "**/node_modules/**",
+        "**/*.txt"
+      ]
+    }
+  ]
 }
