--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -20,6 +20,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx"],
+  "include": ["src/**/*.ts", "src/**/*.tsx",],
   "exclude": ["node_modules", "dist"]
 }
