Upgrade dependencies (`next` to v15.4.7, `@img/sharp` packages) and update import paths for shared hooks (`useOpenEvents`). Refactor redundant alias configurations and clean up TypeScript includes for streamlined setup.

--- a/apps/user/tsconfig.json
+++ b/apps/user/tsconfig.json
@@ -31,6 +31,6 @@
       "@shared/contexts/*": ["../../packages/shared/src/contexts/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "../../packages/shared/src/**/*.ts", "../../packages/shared/src/**/*.tsx", "../admin/src/components/RegenerateReviewButton.tsx", "../admin/src/components/ManageActivityUsersDialog.tsx", "../admin/src/components/UsersList.tsx", "../admin/src/components/UserDetails.tsx", "../admin/src/components/UserActions.tsx", "../admin/src/components/GroupedUsersList.tsx", "../admin/src/components/EventListAdmin.tsx", "../admin/src/hooks/useOpenEvents.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "../../packages/shared/src/**/*.ts", "../../packages/shared/src/**/*.tsx"],
   "exclude": ["node_modules"]
 }
