--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -20,8 +20,10 @@
     "@headlessui/react": "^2.2.5",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@react-pdf/renderer": "^4.3.0",
     "@types/pdfmake": "^0.2.11",
     "axios": "1.11.0",
