--- a/apps/user/package.json
+++ b/apps/user/package.json
@@ -9,18 +9,21 @@
     "lint": "next lint"
   },
   "paths": {
-    "@/*": ["./src/*"]
+    "@/*": [
+      "./src/*"
+    ]
   },
   "dependencies": {
-    "@konnektaro/shared": "*",
     "@headlessui/react": "^2.2.5",
+    "@konnektaro/shared": "*",
+    "@konnektaro/speech-to-text": "^1.0.5",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
     "@react-pdf/renderer": "^4.3.0",
     "@types/pdfmake": "^0.2.11",
-    "axios": "1.11.0",
+    "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cookies-next": "^6.1.0",
