--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -26,7 +26,7 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@react-pdf/renderer": "^4.3.0",
     "@types/pdfmake": "^0.2.11",
-    "axios": "1.11.0",
+    "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cookies-next": "^6.1.0",
