--- a/.versionrc.json
+++ b/.versionrc.json
@@ -1,30 +1,38 @@
 {
-  "types": {
-    "feat": {
+  "types": [
+    {
+      "type": "feat",
       "section": "Features"
     },
-    "fix": {
+    {
+      "type": "fix",
       "section": "Bug Fixes"
     },
-    "chore": {
+    {
+      "type": "chore",
       "section": "Maintenance"
     },
-    "docs": {
+    {
+      "type": "docs",
       "section": "Documentation"
     },
-    "style": {
+    {
+      "type": "style",
       "section": "Styling"
     },
-    "refactor": {
+    {
+      "type": "refactor",
       "section": "Code Refactoring"
     },
-    "perf": {
+    {
+      "type": "perf",
       "section": "Performance Improvements"
     },
-    "test": {
+    {
+      "type": "test",
       "section": "Tests"
     }
-  },
+  ],
   "commitUrlFormat": "{{host}}/{{owner}}/{{repository}}/commit/{{hash}}",
   "compareUrlFormat": "{{host}}/{{owner}}/{{repository}}/compare/{{previousTag}}...{{currentTag}}",
   "issueUrlFormat": "{{host}}/{{owner}}/{{repository}}/issues/{{id}}",
