--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "lint:admin": "npm run lint --workspace=apps/admin",
     "lint:user": "npm run lint --workspace=apps/user",
     "lint:all": "npm run lint:admin && npm run lint:user",
+    "test:user": "npm run test --workspace=apps/user",
+    "test:user:watch": "npm run test:watch --workspace=apps/user",
+    "test:all": "npm run test:user && npm run test:admin",
     "clean": "rm -rf node_modules apps/*/node_modules packages/*/node_modules",
     "sync:assets": "node scripts/sync-public-assets.js",
     "postbuild": "node cleanup.js",
