chore: simplify package.json scripts by removing unused commands and consolidating deployment scripts

--- a/package.json
+++ b/package.json
@@ -9,38 +9,22 @@
   "scripts": {
     "dev:admin": "npm run build:shared:styles && npm run dev --workspace=apps/admin & npm run dev:shared:watch",
     "dev:user": "npm run build:shared:styles && npm run dev --workspace=apps/user & npm run dev:shared:watch",
-    "dev:shared": "npm run dev --workspace=packages/shared",
-    "dev:shared:watch": "npm run dev:styles --workspace=packages/shared",
-    "dev:all": "npm run build:shared:styles && npm run dev:admin & npm run dev:user",
-    "dev": "npm run dev:all",
     "build:admin": "npm run build --workspace=apps/admin",
     "build:user": "npm run build --workspace=apps/user",
     "build:shared": "npm run build --workspace=packages/shared",
     "build:shared:styles": "npm run build:styles --workspace=packages/shared",
     "build:all": "npm run build:shared && npm run build:admin && npm run build:user",
     "build": "npm run build:all",
-    "setup": "npm install && npm run build:shared:styles",
     "lint:admin": "npm run lint --workspace=apps/admin",
     "lint:user": "npm run lint --workspace=apps/user",
     "lint:all": "npm run lint:admin && npm run lint:user",
     "test:user": "npm run test --workspace=apps/user",
-    "test:user:watch": "npm run test:watch --workspace=apps/user",
-    "test:all": "npm run test:user && npm run test:admin",
     "clean": "rm -rf node_modules apps/*/node_modules packages/*/node_modules",
     "sync:assets": "node scripts/sync-public-assets.js",
     "postbuild": "node cleanup.js",
-    "deploy": "npm run build:all && firebase deploy --only hosting",
     "deploy:user": "npm run build:shared:styles && npm run build:user && firebase deploy --only hosting:konnektaro",
     "deploy:admin": "npm run build:shared:styles && npm run build:admin && firebase deploy --only hosting:konnektaro-admin",
-    "deploy:all": "npm run build:all && firebase deploy --only hosting",
-    "release": "standard-version",
-    "release:minor": "standard-version --release-as minor",
-    "release:major": "standard-version --release-as major",
-    "release:patch": "standard-version --release-as patch",
-    "bump": "node scripts/bump-version.js",
-    "bump:patch": "node scripts/bump-version.js patch",
-    "bump:minor": "node scripts/bump-version.js minor",
-    "bump:major": "node scripts/bump-version.js major"
+    "bump": "node scripts/bump-version.js"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.5",
